{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 636,
  "lineage": "90591213-3568-f3b5-a6ca-8dffa1be5c45",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "dash-load-balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:640935740154:loadbalancer/app/dash-load-balancer/6465fdf4a6de1cb7",
            "arn_suffix": "app/dash-load-balancer/6465fdf4a6de1cb7",
            "desync_mitigation_mode": "defensive",
            "dns_name": "dash-load-balancer-1053721173.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:640935740154:loadbalancer/app/dash-load-balancer/6465fdf4a6de1cb7",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dash-load-balancer",
            "security_groups": [
              "sg-093ff212bf9e7711f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0375539f05b0269d5"
              },
              {
                "subnet_id": "subnet-063d8ace7e90e7cc2"
              }
            ],
            "subnets": [
              "subnet-0375539f05b0269d5",
              "subnet-063d8ace7e90e7cc2"
            ],
            "vpc_id": "vpc-0f82df9028ed2ff96",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "dependencies": [
            "aws_security_group.Load-Balancer-SG",
            "module.my_vpc_module.aws_subnet.public-subet-zone-a",
            "module.my_vpc_module.aws_subnet.public-subet-zone-b",
            "module.my_vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "default_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:640935740154:listener/app/dash-load-balancer/6465fdf4a6de1cb7/a38dbc9e1f318f28",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "This path doesnt exists",
                    "status_code": "503"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:640935740154:listener/app/dash-load-balancer/6465fdf4a6de1cb7/a38dbc9e1f318f28",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:640935740154:loadbalancer/app/dash-load-balancer/6465fdf4a6de1cb7",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.dash-load-balancer",
            "aws_security_group.Load-Balancer-SG",
            "module.my_vpc_module.aws_subnet.public-subet-zone-a",
            "module.my_vpc_module.aws_subnet.public-subet-zone-b",
            "module.my_vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "path_based_routing_for_dash_app_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:640935740154:targetgroup/dash-app-1-tg/bb9c1d80c1280957",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:640935740154:listener-rule/app/dash-load-balancer/6465fdf4a6de1cb7/a38dbc9e1f318f28/95977b2a32ddd995",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/apps/dash-app-1*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:640935740154:listener-rule/app/dash-load-balancer/6465fdf4a6de1cb7/a38dbc9e1f318f28/95977b2a32ddd995",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-1:640935740154:listener/app/dash-load-balancer/6465fdf4a6de1cb7/a38dbc9e1f318f28",
            "priority": 99,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.dash-load-balancer",
            "aws_lb_listener.default_listener",
            "aws_lb_target_group.dash-app-1-tg",
            "aws_security_group.Load-Balancer-SG",
            "module.my_vpc_module.aws_subnet.public-subet-zone-a",
            "module.my_vpc_module.aws_subnet.public-subet-zone-b",
            "module.my_vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "path_based_routing_for_dash_app_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:640935740154:targetgroup/dash-app-2-tg/8d66a42bf4f8f222",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:640935740154:listener-rule/app/dash-load-balancer/6465fdf4a6de1cb7/a38dbc9e1f318f28/71814f99a6fbf4c3",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/apps/dash-app-2*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:640935740154:listener-rule/app/dash-load-balancer/6465fdf4a6de1cb7/a38dbc9e1f318f28/71814f99a6fbf4c3",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-1:640935740154:listener/app/dash-load-balancer/6465fdf4a6de1cb7/a38dbc9e1f318f28",
            "priority": 100,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.dash-load-balancer",
            "aws_lb_listener.default_listener",
            "aws_lb_target_group.dash-app-2-tg",
            "aws_security_group.Load-Balancer-SG",
            "module.my_vpc_module.aws_subnet.public-subet-zone-a",
            "module.my_vpc_module.aws_subnet.public-subet-zone-b",
            "module.my_vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "dash-app-1-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:640935740154:targetgroup/dash-app-1-tg/bb9c1d80c1280957",
            "arn_suffix": "targetgroup/dash-app-1-tg/bb9c1d80c1280957",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/apps/dash-app-1/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:640935740154:targetgroup/dash-app-1-tg/bb9c1d80c1280957",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "dash-app-1-tg",
            "port": 8050,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0f82df9028ed2ff96"
          },
          "dependencies": [
            "module.my_vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "dash-app-2-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:640935740154:targetgroup/dash-app-2-tg/8d66a42bf4f8f222",
            "arn_suffix": "targetgroup/dash-app-2-tg/8d66a42bf4f8f222",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/apps/dash-app-2/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:640935740154:targetgroup/dash-app-2-tg/8d66a42bf4f8f222",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "dash-app-2-tg",
            "port": 8050,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0f82df9028ed2ff96"
          },
          "dependencies": [
            "module.my_vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Dash-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:640935740154:security-group/sg-000bc97e1f0b1a675",
            "description": "SG to allow access from load balancer security group on port 8050",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow access from everywhere",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-000bc97e1f0b1a675",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow access from load balancer security group",
                "from_port": 8050,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-093ff212bf9e7711f"
                ],
                "self": false,
                "to_port": 8050
              }
            ],
            "name": "Dash-SG",
            "name_prefix": "",
            "owner_id": "640935740154",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Dash-SG"
            },
            "tags_all": {
              "Name": "Dash-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f82df9028ed2ff96"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.Load-Balancer-SG",
            "module.my_vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Load-Balancer-SG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:640935740154:security-group/sg-093ff212bf9e7711f",
            "description": "SG to allow access from everywhere on port 80",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow access from everywhere",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-093ff212bf9e7711f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow access from everywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "Load-Balancer-SG",
            "name_prefix": "",
            "owner_id": "640935740154",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Load-Balancer-SG"
            },
            "tags_all": {
              "Name": "Load-Balancer-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f82df9028ed2ff96"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc_module",
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic-ip",
      "provider": "module.my_vpc_module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01fda55bf26c215f2",
            "domain": "vpc",
            "id": "eipalloc-01fda55bf26c215f2",
            "network_border_group": "eu-west-1",
            "public_dns": "ec2-52-18-202-48.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.18.202.48",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "module.my_vpc_module.aws_internet_gateway.gw",
            "module.my_vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc_module",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "module.my_vpc_module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:640935740154:internet-gateway/igw-014e52d633d0a860a",
            "id": "igw-014e52d633d0a860a",
            "owner_id": "640935740154",
            "tags": {
              "Name": "dash-internet-gateway"
            },
            "tags_all": {
              "Name": "dash-internet-gateway"
            },
            "vpc_id": "vpc-0f82df9028ed2ff96"
          },
          "dependencies": [
            "module.my_vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc_module",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "dash-public-nat-gateway",
      "provider": "module.my_vpc_module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01fda55bf26c215f2",
            "connectivity_type": "public",
            "id": "nat-067baeb4828cd2936",
            "network_interface_id": "eni-0f708ef0ac1367bc1",
            "private_ip": "10.0.1.178",
            "public_ip": "52.18.202.48",
            "subnet_id": "subnet-063d8ace7e90e7cc2",
            "tags": {
              "Name": "dash-public-nat-gateway"
            },
            "tags_all": {
              "Name": "dash-public-nat-gateway"
            }
          },
          "dependencies": [
            "module.my_vpc_module.aws_eip.elastic-ip",
            "module.my_vpc_module.aws_internet_gateway.gw",
            "module.my_vpc_module.aws_subnet.public-subet-zone-a",
            "module.my_vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc_module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-route-table",
      "provider": "module.my_vpc_module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:640935740154:route-table/rtb-0fbc267f3daefaf32",
            "id": "rtb-0fbc267f3daefaf32",
            "owner_id": "640935740154",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-067baeb4828cd2936",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dash-private-route-table"
            },
            "tags_all": {
              "Name": "dash-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f82df9028ed2ff96"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc_module.aws_eip.elastic-ip",
            "module.my_vpc_module.aws_internet_gateway.gw",
            "module.my_vpc_module.aws_nat_gateway.dash-public-nat-gateway",
            "module.my_vpc_module.aws_subnet.public-subet-zone-a",
            "module.my_vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc_module",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route-table",
      "provider": "module.my_vpc_module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:640935740154:route-table/rtb-003619d29da689bc6",
            "id": "rtb-003619d29da689bc6",
            "owner_id": "640935740154",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-014e52d633d0a860a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dash-public-route-table"
            },
            "tags_all": {
              "Name": "dash-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f82df9028ed2ff96"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.my_vpc_module.aws_internet_gateway.gw",
            "module.my_vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc_module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet-public-route-table-a",
      "provider": "module.my_vpc_module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-082cdd07f68ae8a8d",
            "route_table_id": "rtb-0fbc267f3daefaf32",
            "subnet_id": "subnet-0dde958b923544446"
          },
          "dependencies": [
            "module.my_vpc_module.aws_eip.elastic-ip",
            "module.my_vpc_module.aws_internet_gateway.gw",
            "module.my_vpc_module.aws_nat_gateway.dash-public-nat-gateway",
            "module.my_vpc_module.aws_route_table.private-route-table",
            "module.my_vpc_module.aws_subnet.private-subet-zone-a",
            "module.my_vpc_module.aws_subnet.public-subet-zone-a",
            "module.my_vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc_module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet-public-route-table-b",
      "provider": "module.my_vpc_module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0399f71d3853b9b97",
            "route_table_id": "rtb-0fbc267f3daefaf32",
            "subnet_id": "subnet-04d205baa18ac7d6e"
          },
          "dependencies": [
            "module.my_vpc_module.aws_eip.elastic-ip",
            "module.my_vpc_module.aws_internet_gateway.gw",
            "module.my_vpc_module.aws_nat_gateway.dash-public-nat-gateway",
            "module.my_vpc_module.aws_route_table.private-route-table",
            "module.my_vpc_module.aws_subnet.private-subet-zone-b",
            "module.my_vpc_module.aws_subnet.public-subet-zone-a",
            "module.my_vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc_module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-public-route-table-a",
      "provider": "module.my_vpc_module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e47c3e33f9161682",
            "route_table_id": "rtb-003619d29da689bc6",
            "subnet_id": "subnet-063d8ace7e90e7cc2"
          },
          "dependencies": [
            "module.my_vpc_module.aws_internet_gateway.gw",
            "module.my_vpc_module.aws_route_table.public-route-table",
            "module.my_vpc_module.aws_subnet.public-subet-zone-a",
            "module.my_vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc_module",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-public-route-table-b",
      "provider": "module.my_vpc_module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-016812ac5ad58600d",
            "route_table_id": "rtb-003619d29da689bc6",
            "subnet_id": "subnet-0375539f05b0269d5"
          },
          "dependencies": [
            "module.my_vpc_module.aws_internet_gateway.gw",
            "module.my_vpc_module.aws_route_table.public-route-table",
            "module.my_vpc_module.aws_subnet.public-subet-zone-b",
            "module.my_vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subet-zone-a",
      "provider": "module.my_vpc_module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:640935740154:subnet/subnet-0dde958b923544446",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.128.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dde958b923544446",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "640935740154",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dash-private-subnet-1"
            },
            "tags_all": {
              "Name": "dash-private-subnet-1"
            },
            "vpc_id": "vpc-0f82df9028ed2ff96"
          },
          "dependencies": [
            "module.my_vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subet-zone-b",
      "provider": "module.my_vpc_module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:640935740154:subnet/subnet-04d205baa18ac7d6e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.144.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04d205baa18ac7d6e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "640935740154",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dash-private-subnet-2"
            },
            "tags_all": {
              "Name": "dash-private-subnet-2"
            },
            "vpc_id": "vpc-0f82df9028ed2ff96"
          },
          "dependencies": [
            "module.my_vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subet-zone-a",
      "provider": "module.my_vpc_module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:640935740154:subnet/subnet-063d8ace7e90e7cc2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-063d8ace7e90e7cc2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "640935740154",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dash-public-subnet-1"
            },
            "tags_all": {
              "Name": "dash-public-subnet-1"
            },
            "vpc_id": "vpc-0f82df9028ed2ff96"
          },
          "dependencies": [
            "module.my_vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc_module",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subet-zone-b",
      "provider": "module.my_vpc_module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:640935740154:subnet/subnet-0375539f05b0269d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0375539f05b0269d5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "640935740154",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "dash-public-subnet-2"
            },
            "tags_all": {
              "Name": "dash-public-subnet-2"
            },
            "vpc_id": "vpc-0f82df9028ed2ff96"
          },
          "dependencies": [
            "module.my_vpc_module.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.my_vpc_module",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "module.my_vpc_module.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:640935740154:vpc/vpc-0f82df9028ed2ff96",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cd1cd1575c0bf2b3",
            "default_route_table_id": "rtb-09222424fcd6bead2",
            "default_security_group_id": "sg-0a8e291f5d91ed681",
            "dhcp_options_id": "dopt-cf8a4dab",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0f82df9028ed2ff96",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09222424fcd6bead2",
            "owner_id": "640935740154",
            "tags": {
              "Name": "dash-vpc"
            },
            "tags_all": {
              "Name": "dash-vpc"
            }
          }
        }
      ]
    }
  ]
}